Refactored some css class names and JsDoc for toggleClassName function in basicUtils. Finished JsDoc for displaySizeUtils

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
@@ -1,8 +1,8 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-.list-view-top-bar,
-.js-get-list-view-top-bar {
+.list-view-top-bar-component,
+.js-get-list-view-top-bar-component {
 	// Must be more than table header so filter button can overlap
 	z-index: 1;
 	position: fixed;
