--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -3,8 +3,8 @@
 
 .edit-account-modal-component {
 	.edit-account-modal {
-		// Must be the same as accountBlurredBackgorund.scss
-		z-index: 3;
+		// Must be more than accountBlurredBackgorund.scss
+		z-index: 4;
 		position: fixed;
 		top: 50%;
 		left: 50%;
