--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -8,8 +8,8 @@
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 
-		// Must be the same as accountBlurredBackground.scss
-		z-index: 3;
+		// Must be more than accountBlurredBackground.scss
+		z-index: 4;
 		position: fixed;
 		top: v.$navbar-height;
 		right: 0;
